--- a/src/css/input.css
+++ b/src/css/input.css
@@ -25,7 +25,7 @@
 
   body {
     @apply bg-primary-white dark:bg-primary-black 
-           text-primary-black dark:text-primary-white;
+           text-primary-black dark:text-primary-white overflow-x-hidden;
   }
   section {
     @apply scroll-mt-5 md:scroll-mt-6;
